[package]
name = "resup"
description = "A terminal frontend for Real-ESRGAN."
authors = ["Konstantin Zhigaylo <kostya.zero@outlook.com>"]
keywords = ["realesrgan", "upscale"]
readme = "README.md"
repository = "https://github.com/kostya-zero/resup"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = "4.3.21"
home = "0.5.5"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
