[package]
name = "resup"
description = "A terminal frontend for Real-ESRGAN."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
keywords = ["realesrgan", "upscale"]
readme = "README.md"
repository = "https://github.com/kostya-zero/resup"
license = "MIT"
version = "0.3.1-dev"
edition = "2021"

[dependencies]
clap = "4.5.0"
dialoguer = { version = "0.11.0", features = ["history"] }
home = "0.5.9"
indicatif = "0.17.8"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
